--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ a {
     text-decoration: none;
 }
 
-body{
+body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -13,38 +13,201 @@ body{
 }
 
 
-/* Estilo header */
-header a{
-    color: #ffffff;
+/* Estilo header + nav */
+header a {
+    color: #089841;
     text-decoration: none;
 }
+
+.titulo-color-rojo{
+    color: #dc0d13;
+}
+
+.btn-color:hover{
+border: 2.5px solid #089841;
+color: #089841;
+border-radius: 20px;
+padding: 4px;
+margin-top: -15px;
+}
+
 .header-conjunto {
-    background-color: #333;
+    background: linear-gradient(#18131f, #5e5170);
     color: #ffffff;
     align-items: center;
     max-width: 100%;
     justify-content: center;
     text-align: center;
+    height: 140px;
 }
 
-header h1{
+header nav {
+    grid-column: span 2;
+}
+
+nav{
+display: flex;
+justify-content: center;
+
+}
+ul{
+    margin: 0;
+    padding-left: 0;
+
+}
+ul li {
+display: flex;
+    list-style: none;
+    font-size: 0.9rem;
+}
+
+main section img {
+    max-width: 100%;
+}
+
+.header-horario{
+    display: none;
+}
+.header-horario-noche{
+    display: none;
+}
+nav{
+    grid-column:span 2;
+}
+ul{
+    display: flex;
+    justify-content: center;
     
 }
-
-header nav{
-grid-column: span 2;
+li{
+margin-right: 1rem;
 }
-ul li{
+
+/* Footer estilos*/
+
+.footer-masa{
+    display: none;
+}
+
+
+footer{
+    background: linear-gradient(#18131f, #5e5170);
+    color: #ffffff;
+    align-items: center;
+    max-width: 100%;
+}
+footer img{
+max-width: 35px;
+max-height: 35px;
+}
+
+.footer-img-whatsapp{
+    max-width: 40px;
+    max-height: 40px;
+}
+
+
+footer div{
+display: flex;
 justify-content: center;
-list-style: none;
-margin-bottom: 1rem;
+text-align: center;
+flex-direction: row;
+align-items: center;
+}
+
+/* Fotos comida index */
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    margin: auto;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    position: relative;
+}
+
+.card img {
+    width: 90%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
 
 
-@media screen {
+.descripcion  {
+    background: linear-gradient(#18131f, #5e5170);
+    border-radius: 20px;
+    position:absolute; 
+    bottom: 20px; 
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 10px;
+}
+
+.descripcion:hover{
+    background:linear-gradient(#ffffff00, #5e517000 );
+    border: 2px solid #089841;
+    color: #089841;
+    border-radius: 20px;
+    padding: 8px;
+}
+
+
+
+@media (min-width:1200px) {
+
+    .header-conjunto {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    header nav {
+        grid-column: span 2;
+    }
+    
+    
+.header-horario {
+    color: #089841;
+    font-size: 1,8rem;
+    font-style: italic;
+    font-weight: bold;
+    display: block;
+}
+
+.header-horario-noche{
+    color: #089841;
+    font-size: 1,8px;
+    font-style: italic;
+    font-weight: bold;
+    display: block;
+    margin-top: -15px;
+
+    
+}
+ul li {
+font-size: 1.3rem;
+margin-bottom: 1rem;
+margin-left: 3rem;
+display: flex;
+    }
+
+main{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    
 }
+.footer-masa{
+    display:flex;
+    grid-area: masa;
+}
+footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: 
+    " telefono masa whatsapp"
+    "direccion masa instagram";
+}
+
+}   /* ------------  fin media 1200px ------------*/
+
