--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ a {
     color: #000000;
     text-decoration: none;
 }
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -14,23 +13,21 @@ body {
 
 
 /* Estilo header + nav */
+
+
 header a {
     color: #089841;
     text-decoration: none;
 }
-
 .titulo-color-rojo{
     color: #dc0d13;
 }
-
 .btn-color:hover{
 border: 2.5px solid #089841;
 color: #089841;
 border-radius: 20px;
 padding: 4px;
-margin-top: -15px;
 }
-
 .header-conjunto{
     background: linear-gradient(#18131f, #5e5170);
     color: #ffffff;
@@ -40,11 +37,9 @@ margin-top: -15px;
     text-align: center;
     height: 140px;
 }
-
 header nav {
     grid-column: span 2;
 }
-
 nav{
 display: flex;
 justify-content: center;
@@ -60,11 +55,9 @@ display: flex;
     list-style: none;
     font-size: 0.9rem;
 }
-
 main section img {
     max-width: 100%;
 }
-
 .header-horario{
     display: none;
 }
@@ -83,30 +76,32 @@ li{
 margin-right: 1rem;
 }
 
+
+
 /* Footer estilos*/
+
+
 
 .footer-masa{
     display: none;
 }
-
-
 footer{
     background: linear-gradient(#18131f, #5e5170);
     color: #ffffff;
     align-items: center;
     max-width: 100%;
+    
+    bottom: 0;
+    width: 100%;
 }
 footer img{
 max-width: 35px;
 max-height: 35px;
 }
-
 .footer-img-whatsapp{
     max-width: 40px;
     max-height: 40px;
 }
-
-
 footer div{
 display: flex;
 justify-content: center;
@@ -114,8 +109,13 @@ text-align: center;
 flex-direction: row;
 align-items: center;
 }
+.footer-info{
+    position: fixed;
+}
 
 /* Fotos comida index */
+
+
 .card {
     display: flex;
     flex-direction: column;
@@ -126,17 +126,13 @@ align-items: center;
     padding-top: 10px;
     position: relative;
 }
-
 .card img {
     width: 90%;
     height: auto;
     object-fit: cover;
     border-radius: 50px;
 }
-
-
-
-.descripcion  {
+.descripcion {
     background: linear-gradient(#18131f, #5e5170);
     border-radius: 20px;
     position:absolute; 
@@ -147,7 +143,6 @@ align-items: center;
     cursor: pointer;
     padding: 10px;
 }
-
 .descripcion:hover{
     background:linear-gradient(#ffffff00, #5e517000 );
     border: 2px solid #089841;
@@ -156,7 +151,11 @@ align-items: center;
     padding: 8px;
 }
 
+
+
 /* seccion menu dia/noche */
+
+
 
 .menu-img{
     display: none;
@@ -168,10 +167,13 @@ align-items: center;
     text-align: center;
     margin-bottom: 1rem;
     width: 100vw;
-    padding-right: 1rem;
 }
 
+
+
 /* seccion ubicacion */
+
+
 .main-ubicacion{
 display: flex;
 align-content: center;
@@ -186,7 +188,55 @@ justify-content: center;
     align-items: center;
 }
 
-/*media 1200px*/
+
+
+/* seccion informacion */
+
+
+
+.main-info{
+    text-align: center;
+    justify-content: center;
+    padding-top: 20px;
+}
+.main-info-primtext{
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.main-info-segtext{
+    margin-top: 0;
+    padding-top: 0;
+    font-size: 1rem;
+}
+.main-info-form{
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    justify-items: center;
+    text-align: center;
+    gap: .2rem;
+}
+
+.main-form-button{
+    display: flex;
+    align-self: center;
+    text-align: center;
+    background: linear-gradient(#18131f, #5e5170);
+    color: #fff;
+    border-radius: 20px;
+    padding: 8px;
+    border: 2.5px linear-gradient(#18131f, #5e5170);;
+}
+.main-form-button:hover{
+background: none;
+border: 2.5px solid #089841;
+color: #089841;
+border-radius: 20px;
+padding: 8px;
+}
+
+
+/* ----------------- media 1200px ------------------*/
 @media (min-width:1200px) {
 
     .header-conjunto {
@@ -216,6 +266,10 @@ justify-content: center;
 
     
 }
+
+.btn-color:hover{
+    margin-top: -15px;
+    }
 ul li {
 font-size: 1.3rem;
 margin-bottom: 1rem;
@@ -234,6 +288,7 @@ footer{
     "direccion masa instagram";
 
 }
+
 main{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -298,6 +353,16 @@ main{
     width: 80vw;
 }
 
+.main-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.main-info-form{
+    width: 60vw;
+}
 
 
 
