--- a/scss/Componentes/_footer.scss
+++ b/scss/Componentes/_footer.scss
@@ -1,5 +1,5 @@
 footer{
-    background: linear-gradient(#18131f, #5e5170);
+    background: linear-gradient(#000000, $c-gradient-violeta);
     color: #ffffff;
     align-items: center;
     max-width: 100%;
