--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,3 +1,10 @@
+
+
+$c-secundario-rojo: #dc0d13;
+$c-primario-verde: #089841;
+$c-gradient-violeta: #5e5170;
+$colorrealprimario:#089841;
+
 a {
     color: #000000;
     text-decoration: none;
