--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,26 @@ main section img {
   transition-duration: 1s;
 }
 
+.main-form-button {
+  display: flex;
+  align-self: center;
+  text-align: center;
+  background: linear-gradient(#000000, #5e5170);
+  color: #fff;
+  border-radius: 20px;
+  padding: 8px;
+  border: 2.5px linear-gradient(#000000, #5e5170);
+}
+.main-form-button:hover {
+  background: none;
+  border: 2.5px solid #089841;
+  color: #089841;
+  border-radius: 20px;
+  padding: 8px;
+  transition-property: initial;
+  transition-duration: 1s;
+}
+
 @media (min-width: 1200px) {
   .btn-color:hover {
     margin-top: -15px;
@@ -117,7 +137,6 @@ header a {
 .header-horario {
   display: none;
 }
-
 .header-horario-noche {
   display: none;
 }
@@ -159,7 +178,7 @@ ul {
   display: flex;
   justify-content: center;
 }
-ul ul li {
+ul li {
   display: flex;
   list-style: none;
   font-size: 0.9rem;
@@ -187,32 +206,11 @@ ul ul li {
   padding-top: 10px;
   position: relative;
 }
-
 .card img {
   width: 90%;
   height: auto;
   object-fit: cover;
   border-radius: 50px;
-}
-
-.descripcion {
-  background: linear-gradient(#000000, #5e5170);
-  border-radius: 20px;
-  position: absolute;
-  bottom: 40px;
-  left: 45%;
-  color: #fff;
-  font-weight: bold;
-  cursor: pointer;
-  padding: 10px;
-}
-
-.descripcion:hover {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(94, 81, 112, 0));
-  border: 2px solid #089841;
-  color: #089841;
-  border-radius: 20px;
-  padding: 8px;
 }
 
 @media (min-width: 1200px) {
@@ -240,7 +238,6 @@ ul ul li {
 .menu-img {
   display: none;
 }
-
 .menu-img-mobile {
   display: grid;
   justify-content: center;
@@ -268,7 +265,6 @@ ul ul li {
   text-align: center;
   justify-content: center;
 }
-
 .main-ubicacion-caja {
   width: 100vw;
 }
@@ -287,18 +283,15 @@ ul ul li {
   justify-content: center;
   padding-top: 20px;
 }
-
 .main-info-primtext {
   margin-bottom: 0;
   padding-bottom: 0;
 }
-
 .main-info-segtext {
   margin-top: 0;
   padding-top: 0;
   font-size: 1rem;
 }
-
 .main-info-form {
   display: flex;
   flex-direction: column;
@@ -306,27 +299,6 @@ ul ul li {
   justify-items: center;
   text-align: center;
   gap: 0.2rem;
-}
-
-.main-form-button {
-  display: flex;
-  align-self: center;
-  text-align: center;
-  background: linear-gradient(#000000, #5e5170);
-  color: #fff;
-  border-radius: 20px;
-  padding: 8px;
-  border: 2.5px linear-gradient(#000000, #5e5170);
-}
-
-.main-form-button:hover {
-  background: none;
-  border: 2.5px solid #089841;
-  color: #089841;
-  border-radius: 20px;
-  padding: 8px;
-  transition-property: initial;
-  transition-duration: 1s;
 }
 
 @media (min-width: 1200px) {
