--- a/scss/Componentes/_nav.scss
+++ b/scss/Componentes/_nav.scss
@@ -11,7 +11,7 @@ ul{
     padding-left: 0;
     display: flex;
     justify-content: center;
-    ul li {
+    & li {
         display: flex;
         list-style: none;
         font-size: 0.9rem;
