--- a/scss/Pages/_index.scss
+++ b/scss/Pages/_index.scss
@@ -7,31 +7,14 @@
     padding-bottom: 10px;
     padding-top: 10px;
     position: relative;
+    & img{
+        width: 90%;
+        height: auto;
+        object-fit: cover;
+        border-radius: 50px;
+    }
 }
-.card img {
-    width: 90%;
-    height: auto;
-    object-fit: cover;
-    border-radius: 50px;
-}
-.descripcion {
-    background: linear-gradient(#000000, $c-gradient-violeta);
-    border-radius: 20px;
-    position:absolute; 
-    bottom: 40px; 
-    left: 45%;
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    padding: 10px;
-}
-.descripcion:hover{
-    background:linear-gradient(#00000000, #5e517000 );
-    border: 2px solid $c-primario-verde;
-    color: $c-primario-verde;
-    border-radius: 20px;
-    padding: 8px;
-}
+
 @media (min-width:1200px){
     main{
         display: grid;
@@ -48,9 +31,10 @@
         padding-top: 10px;
         position: relative;
         margin: 25px;
+        & img {
+            width: 100%;
+            height: 100%;
+        }
     }
-    .card img {
-        width: 100%;
-        height: 100%;
-    }
+
 }
